@@ -1,3 +1,9 @@
+1999-04-14    <tytso@rsts-11.mit.edu>
+
+	* t_imp_name.c: Initialize display_file variable in main(),
+		instead of using a static initializer.  (Needed for
+		Linux/glibc 2.1)
+
 1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>
 
 	* Makefile.in: Set the myfulldir and mydir variables (which are
